# altair

./: .env.example  .gitignore  MakeFile  docker-compose.yml  makefile  package-lock.json  template.env
.circleci/: config.yml
backend/: .pre-commit-config.yaml  Dockerfile  entrypoint.sh  manage.py  pyproject.toml  pytest.ini
backend/Common/enums/: Languages.py
backend/comments/: models.py  views.py
backend/comments/migrations/: 0001_initial.py
backend/main_app/: asgi.py  settings.py  urls.py  wsgi.py
backend/movies/: __init__.py  models.py
backend/movies/celery/: celery.py  tasks.py
backend/movies/migrations/: 0001_initial.py  0002_language_and_user_update.py
backend/users/: admin.py  models.py
backend/users/migrations/: 0001_initial.py  0002_language_and_user_update.py
celery/: Dockerfile  requirements.txt
frontend/: .eslintrc.json  .prettierignore  .prettierrc.js  Dockerfile  dev.Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: Providers.tsx  layout.tsx  page.tsx  providers.tsx  store.ts
frontend/src/app/component/: CardSilder.tsx  NavBar.tsx  VideoCard.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
nginx/: nginx.conf
